src/objects/Inbound_Message__c.object
<CustomObject>
    <description>Inbound messages from the physical array</description>
    <fields>
        <fullName>Pin__c</fullName>
        <description>Pin address on the array that a command needs to be invoked on.</description>
        <inlineHelpText>Pin address on the array that a command needs to be invoked on.</inlineHelpText>
        <label>Pin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Address__c</fullName>
        <description>IP address of the array that this message originated from.</description>
        <inlineHelpText>IP address of the array that this message originated from.</inlineHelpText>
        <label>Source Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inbound Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Source_Address__c</columns>
        <columns>Pin__c</columns>
        <columns>Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Msg-{MMDDYY}-{000000}</displayFormat>
        <label>Inbound Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>